@@ -1,6 +1,8 @@
 2009-02-14 Harri Pitkänen <hatapitk@iki.fi>
 
 	* Add support for environment variable VOIKKO_DICTIONARY.
+	* Do not try to check character case for sentences that have
+	  been written fully in upper case.
 
 2009-01-31 Harri Pitkänen <hatapitk@iki.fi>
 
